# freeplay-gametalk

./: .env.example  .env.public  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md  build.rs  package-linux.sh  package-macos.sh  package.ps1
.github/workflows/: ci.yml  pages.yml  release.yml
docs/replays/: index.html  replays.json
src/: audio_recovery.rs  cli.rs  clip.rs  config.rs  controllers.rs  diag.rs  discord_webhook.rs  doctor.rs  drone.rs  font.rs  frame_timer.rs  ghost.rs  gl_crt.rs  incident.rs  input.rs  input_history.rs  lab.rs  log.rs  main.rs  match_replay.rs  matchmaking.rs  memory.rs  menu.rs  menu_input.rs  mk2_addrs.rs  mk2_perf.rs  native_titlebar_drag.rs  net_set.rs  net_stats_ui.rs  netcore.rs  netplay.rs  png.rs  protocol.rs  relay_socket.rs  render.rs  replay.rs  replay_upload.rs  retro.rs  rom.rs  rpc.rs  (+8 more)
src/fp_ui/: about.rs  bandwidth.rs  chrome.rs  claim_username.rs  connection_failed.rs  discord_connect.rs  geometry.rs  ghost_select.rs  input.rs  lab_menu.rs  layout.rs  lobby.rs  lobby_room.rs  main_menu.rs  matchmaking.rs  mod.rs  play_menu.rs  profile.rs  quit.rs  rankings.rs  rebind_capture.rs  replay_select.rs  session_ended.rs  settings.rs  spectate_connecting.rs  text_entry.rs  theme.rs  toast.rs
tools/: Makefile.mk2  README.md  build-fbneo-linux.sh  build-fbneo-macos.sh  build-fbneo-windows.ps1  test-relay-local.ps1
